--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,6 @@ version: '3.9'
 
 services:
   web:
-    image: "rajlaxmii/node-app-demo:latest"
+    image: "trainwithshubham/node-app-batch-6:latest"
     ports:
       - "8000:8000"
